--- a/Components/App.razor
+++ b/Components/App.razor
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="@Assets["FreelanceManager.styles.css"]" />
     <link href="https://cdn.syncfusion.com/blazor/23.1.36/styles/material3.css" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet" />
-    <script src="_content/Syncfusion.Blazor.Core/scripts/syncfusion-blazor.min.js" type="text/javascript"></script>
+    <script src="_content/Syncfusion.Blazor/scripts/syncfusion-blazor.min.js" type="text/javascript"></script>
     <ImportMap />
     <link rel="icon" type="image/png" href="favicon.png" />
     <HeadOutlet />
@@ -19,7 +19,7 @@
 
 <body>
     <Routes />
-    @* <script src="_framework/blazor.web.js"></script> *@
+    <script src="_framework/blazor.web.js"></script>
 </body>
 
 </html>
