--- a/wwwroot/app.css
+++ b/wwwroot/app.css
@@ -88,7 +88,7 @@ h1:focus {
 
 .divider {
     height: 1px;
-    background-color: var(--ion-color-lightgrey);
+    background-color: rgb(211, 211, 211);
 }
 
 .visibility-hidden {
@@ -321,6 +321,9 @@ h1:focus {
 
 .w-100 {
     width: 100%;
+}
+.w-50{
+    width: 50%;
 }
 .w-300px {
     width: 300px;
@@ -563,5 +566,4 @@ h1:focus {
     border-radius: 5px;
     border: 1px solid #c8c8c8;
     background-color: white;
-    cursor: pointer;
 }
