--- a/Components/Layout/MainLayout.razor.css
+++ b/Components/Layout/MainLayout.razor.css
@@ -14,7 +14,7 @@ main {
 }
 
 .top-row {
-    background-color: #534592;
+    background-color: #735EAB;
     border-bottom: 1px solid #d6d5d5;
     justify-content: flex-end;
     height: 50px;
