--- a/Components/_Imports.razor
+++ b/Components/_Imports.razor
@@ -14,3 +14,4 @@
 @using Syncfusion.Blazor.Inputs
 @using Syncfusion.Blazor.Notifications
 @using Syncfusion.Blazor.Grids
+@using Syncfusion.Blazor.Kanban
