--- a/Components/Pages/Projects/Projects.razor
+++ b/Components/Pages/Projects/Projects.razor
@@ -70,7 +70,7 @@
                     <GridColumn Field=@nameof(TarefaDto.StatusDescription) HeaderText="StatusDescription"></GridColumn>
                 </GridColumns>
             </SfGrid> *@
-            <SfKanban TValue="TarefaDto" KeyField="StatusDescription" DataSource="_tarefas">
+            <SfKanban @ref="KanbanObj" TValue="TarefaDto" KeyField="StatusDescription" DataSource="_tarefas">
                 <KanbanColumns>
                     <KanbanColumn HeaderText="To Do" KeyField="@(new List<string>() { "Created" })"></KanbanColumn>
                     <KanbanColumn HeaderText="In Progress" KeyField="@(new List<string>() { "InProgress" })">
@@ -81,7 +81,8 @@
                 </KanbanColumns>
                 <KanbanCardSettings HeaderField="Name" ContentField="Description"></KanbanCardSettings>
                 @* <KanbanSwimlaneSettings KeyField="Assignee"></KanbanSwimlaneSettings> *@
-                <KanbanEvents TValue="TarefaDto" DialogOpen="@OnDialogOpen"></KanbanEvents>
+                <KanbanEvents TValue="TarefaDto" DialogOpen="@OnDialogOpen" ActionComplete="OnKanbanActionComplete">
+                </KanbanEvents>
             </SfKanban>
         </div>
     </div>
@@ -92,17 +93,17 @@
         <div class="cardStyle">
             <h5>New Project</h5>
             <EditForm Model="ProjectModel" method="post" OnValidSubmit="CreateProject" FormName="ProjectForm"
-                class="w-100 flex flex-column gap-10">
+                      class="w-100 flex flex-column gap-10">
                 <DataAnnotationsValidator />
                 <SfTextBox Placeholder='Name' CssClass="e-outline" @bind-Value="ProjectModel.Name"
-                    id="ProjectModel.Name" FloatLabelType="FloatLabelType.Always">
+                           id="ProjectModel.Name" FloatLabelType="FloatLabelType.Always">
                 </SfTextBox>
                 <SfTextBox Placeholder='Description' Type="InputType.Text" CssClass="e-outline"
-                    FloatLabelType="FloatLabelType.Always" @bind-Value="ProjectModel.Description"
-                    id="ProjectModel.Description">
+                           FloatLabelType="FloatLabelType.Always" @bind-Value="ProjectModel.Description"
+                           id="ProjectModel.Description">
                 </SfTextBox>
                 <SfTextBox Placeholder='Notes' Type="InputType.Text" CssClass="e-outline"
-                    FloatLabelType="FloatLabelType.Always" @bind-Value="ProjectModel.Notes" id="ProjectModel.Notes">
+                           FloatLabelType="FloatLabelType.Always" @bind-Value="ProjectModel.Notes" id="ProjectModel.Notes">
                 </SfTextBox>
                 <SfButton Type="submit" CssClass="e-primary" class="w-100">Create</SfButton>
             </EditForm>
@@ -115,17 +116,17 @@
         <div class="cardStyle">
             <h5>New Personal Task</h5>
             <EditForm Model="TarefaModel" method="post" OnValidSubmit="CreateTarefa" FormName="TarefaForm"
-                class="w-100 flex flex-column gap-10">
+                      class="w-100 flex flex-column gap-10">
                 <DataAnnotationsValidator />
                 <SfTextBox Placeholder='Name' CssClass="e-outline" @bind-Value="TarefaModel.Name" id="TarefaModel.Name"
-                    FloatLabelType="FloatLabelType.Always">
+                           FloatLabelType="FloatLabelType.Always">
                 </SfTextBox>
                 <SfTextBox Placeholder='Description' Type="InputType.Text" CssClass="e-outline"
-                    FloatLabelType="FloatLabelType.Always" @bind-Value="TarefaModel.Description"
-                    id="TarefaModel.Description">
+                           FloatLabelType="FloatLabelType.Always" @bind-Value="TarefaModel.Description"
+                           id="TarefaModel.Description">
                 </SfTextBox>
                 <SfTextBox Placeholder='Notes' Type="InputType.Text" CssClass="e-outline"
-                    FloatLabelType="FloatLabelType.Always" @bind-Value="TarefaModel.Notes" id="TarefaModel.Notes">
+                           FloatLabelType="FloatLabelType.Always" @bind-Value="TarefaModel.Notes" id="TarefaModel.Notes">
                 </SfTextBox>
                 <SfButton Type="submit" CssClass="e-primary" class="w-100">Create</SfButton>
             </EditForm>
@@ -138,6 +139,7 @@
 </div>
 @code {
     SfToast ToastObj;
+    SfKanban<TarefaDto> KanbanObj;
     private List<ProjectDto> _personalProjects = new List<ProjectDto>();
     private List<TarefaDto> _tarefas = new List<TarefaDto>();
     private string userId;
@@ -235,7 +237,7 @@
                     bgColor = "bg-color-created",
                     textColor = "color-created",
                     bgColorOpacity =
-                "bg-color-created-opacity"
+                        "bg-color-created-opacity"
                 };
             case ProjectStatus.Completed:
                 return new colorResult
@@ -243,7 +245,7 @@
                     bgColor = "bg-color-completed",
                     textColor = "color-completed",
                     bgColorOpacity =
-                "bg-color-completed-opacity"
+                        "bg-color-completed-opacity"
                 };
             case ProjectStatus.InProgress:
                 return new colorResult
@@ -251,7 +253,7 @@
                     bgColor = "bg-color-inprogress",
                     textColor = "color-inprogress",
                     bgColorOpacity =
-                "bg-color-inprogress-opacity"
+                        "bg-color-inprogress-opacity"
                 };
             case ProjectStatus.OnHold:
                 return new colorResult
@@ -259,7 +261,7 @@
                     bgColor = "bg-color-onhold",
                     textColor = "color-onhold",
                     bgColorOpacity =
-                "bg-color-onhold-opacity"
+                        "bg-color-onhold-opacity"
                 };
             default:
                 return new colorResult { };
@@ -278,4 +280,41 @@
     {
         args.Cancel = true;
     }
+     private async Task OnKanbanActionComplete(Syncfusion.Blazor.Kanban.ActionEventArgs<TarefaDto> args)
+    {
+        if (args.RequestType == "cardChange" && args.ChangedRecords?.Any() == true)
+        {
+            var changedRecord = args.ChangedRecords.First();
+            changedRecord.Status = changedRecord.StatusDescription switch
+            {
+                "Created" => TarefaStatus.Created,
+                "InProgress" => TarefaStatus.InProgress,
+                "OnHold" => TarefaStatus.OnHold,
+                "Completed" => TarefaStatus.Completed,
+                _ => changedRecord.Status
+            };
+            TarefaModel model = new TarefaModel();
+
+            model.Code = changedRecord.Code;
+            model.Name = changedRecord.Name;
+            model.Description = changedRecord.Description;
+            model.StartDate = changedRecord.StartDate;
+            model.EndDate = changedRecord.EndDate;
+            model.Notes = changedRecord.Notes;
+            model.Status = changedRecord.Status;
+
+            var result = await TarefasService.UpdateAsync(changedRecord.Id, model);
+            if (result != null)
+            {
+                await UtilsService.ShowSuccessToast(ToastObj, "Task updated successfully");
+            }
+            else
+            {
+                await UtilsService.ShowErrorToast(ToastObj, "Error updating task");
+            }
+            await LoadTarefas();
+            await KanbanObj.RefreshAsync();
+            
+        }
+    } 
 }
